# minecraft-zero-ui-v2

./: CMakeLists.txt  README.md  打开游戏.bat
assets/shaders/: block.frag  block.vert
include/: block.h  camera.h  chunk.h  input.h  physics.h  player.h  renderer.h  shader.h  texture.h  window.h  world.h
include/math/: vec3.h
src/: block.c  chunk.c  input.c  main.c  physics.c  player.c  renderer.c  shader.c  texture.c  window.c  world.c
